--- a/index.html
+++ b/index.html
@@ -731,6 +731,10 @@ Professional (and as an add-on with Jaspersoft Reporting).</p>
 </code></pre></div><h3 id='authentication-3'>Authentication</h3>
 <p>Try it:</p>
 
+<p><b><a href="https://jsfiddle.net/gh/get/jQuery/3.4.1/CONTENT-URL/JS-visualize/tree/master/dashboard-auth/dash-destroy/">Dashboard destroy</a></b></p>
+
+<p>Demonstration of destroying dashboard.</p>
+        
 <p><b><a href="https://jsfiddle.net/gh/get/jQuery/3.4.1/CONTENT-URL/JS-visualize/tree/master/dashboard-auth/dash-auth/">Dashboard login/logout</a></b></p>
 
 <p>Simple authentication with demonstration of destroying session with dashboards.</p>
