--- a/index.html
+++ b/index.html
@@ -724,10 +724,14 @@ Professional (and as an add-on with Jaspersoft Reporting).</p>
 <p><b><a href="https://jsfiddle.net/gh/get/jQuery/3.4.1/CONTENT-URL/JS-visualize/tree/master/dashboard-embed/dash-embed/">Dashboard render with input control</a></b></p>
 
 <p>Initialization of the visualize.js library with simple rendering of a dashboard (with an embedded input control and hyperlinks) using plain text authentication.</p>
-        <p><b><a href="https://jsfiddle.net/gh/get/jQuery/3.4.1/CONTENT-URL/JS-visualize/tree/master/dashboard-embed/dash-info/">Dashboard information</a></b></p>
+        
+<p>Try it:</p>
+<p><b><a href="https://jsfiddle.net/gh/get/jQuery/3.4.1/CONTENT-URL/JS-visualize/tree/master/dashboard-embed/dash-info/">Dashboard information</a></b></p>
 
 <p>Get information about dashboard components</p>
-         <p><b><a href="https://jsfiddle.net/gh/get/jQuery/3.4.1/CONTENT-URL/JS-visualize/tree/master/dashboard-embed/dash-paraminfo/">Dashboard params information</a></b></p>
+ 
+<p>Try it:</p>
+<p><b><a href="https://jsfiddle.net/gh/get/jQuery/3.4.1/CONTENT-URL/JS-visualize/tree/master/dashboard-embed/dash-paraminfo/">Dashboard params information</a></b></p>
 
 <p>Get information about available dashboard parameters.</p>
 
