--- a/index.html
+++ b/index.html
@@ -795,7 +795,28 @@ Professional (and as an add-on with Jaspersoft Reporting).</p>
 <p><b><a href="https://jsfiddle.net/gh/get/jQuery/3.4.1/CONTENT-URL/JS-visualize/tree/master/inputControl-data/custom-dropdown/">Custom drop down</a></b>, <b><a href="https://jsfiddle.net/gh/get/jQuery/3.4.1/CONTENT-URL/JS-visualize/tree/master/inputControl-data/inside-table/">show inside table</a></b></p>
 
 <p>These examples show accessing data directly from a JRS Input Control.</p>
+<h3 id='ui-controls'>UI Controls</h3>
+<p>Try it:</p>
 
+<p><b><a href="https://jsfiddle.net/gh/get/jQuery/3.4.1/CONTENT-URL/JS-visualize/tree/master/dashboard-ui/dash-interactivity/">Component interactivity</a></b></p>
+
+<p>Enable/disable component interactivity via API.</p>
+<p>Try it:</p>
+
+<p><b><a href="https://jsfiddle.net/gh/get/jQuery/3.4.1/CONTENT-URL/JS-visualize/tree/master/dashboard-ui/dash-overlay/">Disabling report loading overlay</a></b></p>
+
+<p>Disabling report loading overlay.</p>
+<p>Try it:</p>
+
+<p><b><a href="https://jsfiddle.net/gh/get/jQuery/3.4.1/CONTENT-URL/JS-visualize/tree/master/dashboard-ui/dash-toolbar/">Control dashlet toolbar</a></b></p>
+
+<p>Control dashlet toolbar via API.</p>
+                <p>Try it:</p>
+
+<p><b><a href="https://jsfiddle.net/gh/get/jQuery/3.4.1/CONTENT-URL/JS-visualize/tree/master/dashboard-ui/min-max/">Maximize/minimize dashlets</a></b></p>
+
+<p>Maximize/minimize dashlets through API.</p>
+        
 <blockquote>
 <p>The following samples embed JRS Input Controls and/or their data. These first two are the exception in that they only pass data into the application.</p>
 </blockquote>
