--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                     <a href="#hyperlinks-3" class="toc-h2 toc-link" data-title="Hyperlinks">Hyperlinks</a>
                   </li>
                   <li>
-                    <a href="#ui-controls" class="toc-h2 toc-link" data-title="UI Controls">UI Controls</a>
+                    <a href="#ui-controls-3" class="toc-h2 toc-link" data-title="UI Controls">UI Controls</a>
                   </li>
               </ul>
           </li>
@@ -780,9 +780,9 @@ Professional (and as an add-on with Jaspersoft Reporting).</p>
 
 <p>Control the dashboard navigation with undo/redo events.</p>
         
-<p><b><a href="https://jsfiddle.net/gh/get/jQuery/3.4.1/CONTENT-URL/JS-visualize/tree/master/dashboard-input/dash-applyParam/">Dashboard parameters</a></b></p>
+<p><b><a href="https://jsfiddle.net/gh/get/jQuery/3.4.1/CONTENT-URL/JS-visualize/tree/master/dashboard-input/dash-applyParam/">Apply Dashboard parameters</a></b></p>
 
-<p>Get information about available dashboard parameters.</p>
+<p>Apply dashboard params initially.</p>
 <h3 id='hyperlinks-3'>Hyperlinks</h3>
 <p>Try it:</p>
 
@@ -795,7 +795,7 @@ Professional (and as an add-on with Jaspersoft Reporting).</p>
 <p><b><a href="https://jsfiddle.net/gh/get/jQuery/3.4.1/CONTENT-URL/JS-visualize/tree/master/inputControl-data/custom-dropdown/">Custom drop down</a></b>, <b><a href="https://jsfiddle.net/gh/get/jQuery/3.4.1/CONTENT-URL/JS-visualize/tree/master/inputControl-data/inside-table/">show inside table</a></b></p>
 
 <p>These examples show accessing data directly from a JRS Input Control.</p>
-<h3 id='ui-controls'>UI Controls</h3>
+<h3 id='ui-controls-3'>UI Controls</h3>
 <p>Try it:</p>
 
 <p><b><a href="https://jsfiddle.net/gh/get/jQuery/3.4.1/CONTENT-URL/JS-visualize/tree/master/dashboard-ui/dash-interactivity/">Component interactivity</a></b></p>
